--- a/vermontcomplexsystems-foundation.rw8/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Contents.plist
@@ -8066,7 +8066,7 @@
 					<key>page55 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-05-03T14:30:28Z</date>
+						<date>2019-05-05T16:59:32Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -8115,21 +8115,21 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								5SEHlmzIRPnE
-								h1Zlyu2W+A==
+								TPGeujKpTzHL
+								QR5lGhvUSw==
 								</data>
 								<key>Size</key>
-								<integer>35205</integer>
+								<integer>35739</integer>
 							</dict>
 							<key>files/stacks-image-097fb8f-400x190@2x.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								ZP2FJ/yve/bb
-								UMUDEFQ7OA==
+								v9Af7SEGojgo
+								zGOufpUslA==
 								</data>
 								<key>Size</key>
-								<integer>68310</integer>
+								<integer>69192</integer>
 							</dict>
 							<key>files/stacks-image-0c90353-700x375.jpg</key>
 							<dict>
@@ -8305,11 +8305,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								AQQpX6Vwp+W4
-								iqILFHYS5g==
+								J0oCqNLQIZun
+								8nxN/0xT1A==
 								</data>
 								<key>Size</key>
-								<integer>27501</integer>
+								<integer>28375</integer>
 							</dict>
 							<key>files/stacks-image-7700296-350x375.png</key>
 							<dict>
@@ -8360,16 +8360,6 @@
 								</data>
 								<key>Size</key>
 								<integer>61533</integer>
-							</dict>
-							<key>files/stacks-image-80d7927-900x156.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								AQQpX6Vwp+W4
-								iqILFHYS5g==
-								</data>
-								<key>Size</key>
-								<integer>27501</integer>
 							</dict>
 							<key>files/stacks-image-843a067.jpg</key>
 							<dict>
@@ -8431,6 +8421,16 @@
 								<key>Size</key>
 								<integer>14739</integer>
 							</dict>
+							<key>files/stacks-image-b988785.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								Sk3k6UY9Mnj5
+								hGCpGGL2FQ==
+								</data>
+								<key>Size</key>
+								<integer>7064</integer>
+							</dict>
 							<key>files/stacks-image-bce74cf-350x375.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -8481,6 +8481,16 @@
 								<key>Size</key>
 								<integer>84706</integer>
 							</dict>
+							<key>files/stacks-image-d7126ef.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								ra1mM7S55BV2
+								/ztl2wqtmg==
+								</data>
+								<key>Size</key>
+								<integer>10055</integer>
+							</dict>
 							<key>files/stacks-image-e5e8064-350x375.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -8520,6 +8530,16 @@
 								</data>
 								<key>Size</key>
 								<integer>511231</integer>
+							</dict>
+							<key>files/stacks-image-f2255cc.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								7fuFYqxp4ZKE
+								NaScMwEUQA==
+								</data>
+								<key>Size</key>
+								<integer>13269</integer>
 							</dict>
 							<key>files/stacks-image-f39249a-1200x900.jpg</key>
 							<dict>
@@ -8565,18 +8585,18 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								m8v9GUVvLgk9
-								1Znvs2J2+Q==
+								SGkY2QNNvMzJ
+								epw5AP9jwQ==
 								</data>
 								<key>Size</key>
-								<integer>555034</integer>
+								<integer>551720</integer>
 							</dict>
 							<key>files/stacks_page_page55.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								+Ec31fYsd6yd
-								zcnrKF7cQQ==
+								bDSaWWzkGCYL
+								Vm5aAEEClg==
 								</data>
 								<key>Size</key>
 								<integer>76439</integer>
@@ -8585,11 +8605,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								hzUpRCy1WU/T
-								/ipRtwKn5Q==
+								J0XmsP2gOkEF
+								qPCeFReaPA==
 								</data>
 								<key>Size</key>
-								<integer>934882</integer>
+								<integer>931927</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -14640,7 +14660,7 @@
 					<key>rw:document:extrafiles - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-05-03T14:30:28Z</date>
+						<date>2019-05-05T16:59:32Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -14669,11 +14689,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								q6UHHtXBdxk6
-								i/UpzoC3nA==
+								7lLZ6PfKx8OF
+								ocEx83puGw==
 								</data>
 								<key>Size</key>
-								<integer>5569</integer>
+								<integer>5537</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -14752,7 +14772,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-05-03T14:30:28Z</date>
+						<date>2019-05-05T16:59:32Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -15791,11 +15811,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								yGSVNHojDkMs
-								VIbyzy9COQ==
+								W4OzyARjq2dd
+								KUdftG3RqA==
 								</data>
 								<key>Size</key>
-								<integer>4636</integer>
+								<integer>3785</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -15939,7 +15959,7 @@
 				RDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0aWNpcGFu
 				dHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVkdWxlLnBk
 				Zl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFFLTU3QjlB
-				NzZEQjMxM9JDC0RFV05TLnRpbWUjQcE+RAQWnZWADNIe
+				NzZEQjMxM9JDC0RFV05TLnRpbWUjQcE/pvzU6hiADNIe
 				H0dIVk5TRGF0ZaJHI9MJCgtKTE6hS4AOoU2AD4AQXxAt
 				c2Z0cDovY21wbHhzeXMudzMudXZtLmVkdS93d3ctcm9v
 				dC90ZW1wbGF0ZXJ5CNIeH1JTXxATTlNNdXRhYmxlRGlj
@@ -15949,14 +15969,14 @@
 				FoAVXxAkMkU4QzdEREMtQUVCNC00MUZCLUJGRUQtRTZC
 				OEMwRDQ3QzkzXxAjUEZEIGZvciBwYXJ0aWNpcGFudHMg
 				SFdCIEFnZW5kYS5wZGZfECQ1RjgwNjhENS0wNDgyLTQx
-				MDItQTc3QS0xODU2RUYwOUZBRUXSQwtoRSNBwT5EBBae
-				AoAM0wkKC2ttTqFsgBihTYAPgBBfEC1zZnRwOi9jbXBs
+				MDItQTc3QS0xODU2RUYwOUZBRUXSQwtoRSNBwT+m/NTq
+				hYAM0wkKC2ttTqFsgBihTYAPgBBfEC1zZnRwOi9jbXBs
 				eHN5cy53My51dm0uZWR1L3d3dy1yb290L3RlbXBsYXRl
 				cnnaLS4LLzAxEzIzNDVzNxYWd3h5ensIgCCAEYAAgACA
 				HoAbgBqAHYAcXxAkMzExQ0JERDItOTJCNy00MDE4LUIw
 				OTgtNDhGMjhFMEQwOUFGXxAcb2N0b3B1c19pY29uX3Ry
 				YW5zcGFyZW50LnBuZ18QJDAzQTRDMzNCLTY2NjAtNDMx
-				Mi1BQkIxLURERDE3ODVGRjkxM9JDC4BFI0HBPkQEFp4j
+				Mi1BQkIxLURERDE3ODVGRjkxM9JDC4BFI0HBP6b81Oq4
 				gAzTCQoLg4VOoYSAH6FNgA+AEF8QLXNmdHA6L2NtcGx4
 				c3lzLnczLnV2bS5lZHUvd3d3LXJvb3QvdGVtcGxhdGVy
 				eV8Qbi92YXIvZm9sZGVycy82Ni9oX252bng0OTVmc19w
@@ -15966,7 +15986,7 @@
 				kpOUCIAogBGAAIAAgCaAI4AigCWAJF8QJEVCN0EwMEJB
 				LTI0RTMtNDY4Qi1CNDU2LTlDMjM3QjgwRDBFQ1tmYXZp
 				Y29uLmljb18QJEE1NDVEMzc1LTFCNkItNEU5My1CQjU3
-				LTEyNEY1NzEyMEZFMtJDC5lFI0HBPkQEFp49gAzTCQoL
+				LTEyNEY1NzEyMEZFMtJDC5lFI0HBP6b81OrRgAzTCQoL
 				nJ5OoZ2AJ6FNgA+AEF8QLXNmdHA6L2NtcGx4c3lzLncz
 				LnV2bS5lZHUvd3d3LXJvb3QvdGVtcGxhdGVyeV8QXS92
 				YXIvZm9sZGVycy82Ni9oX252bng0OTVmc19wMGxteGI3
@@ -15976,7 +15996,7 @@
 				ECQ0MTExRkI1Mi1BMjJBLTRENjUtODY5Mi1CRTYzMEU2
 				RENBNkNfEBRhcHBsZS10b3VjaC1pY29uLnBuZ18QJEFC
 				NTBGRDUyLUE1NEUtNEYyMi05OTRELUUxNUE3RUYyMjRB
-				MtJDC7JFI0HBPkQEFp5WgAzTCQoLtbdOobaAL6FNgA+A
+				MtJDC7JFI0HBP6b81OrqgAzTCQoLtbdOobaAL6FNgA+A
 				EF8QLXNmdHA6L2NtcGx4c3lzLnczLnV2bS5lZHUvd3d3
 				LXJvb3QvdGVtcGxhdGVyeV8QZi92YXIvZm9sZGVycy82
 				Ni9oX252bng0OTVmc19wMGxteGI3Z3RwcDQwMDAwZ3Ev
