--- a/vermontcomplexsystems-foundation.rw8/Pages/01-003Ci-class003D0022fa-fa-home-fa-2x0022003E003C002Fi003E/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/01-003Ci-class003D0022fa-fa-home-fa-2x0022003E003C002Fi003E/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-05-02T20:30:55Z</date>
+						<date>2019-05-06T15:56:47Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -44,11 +44,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								G4Y9tYnNmeJd
-								tCKmX69D6w==
+								rWNdu8S98qe+
+								bMUT7xodxg==
 								</data>
 								<key>Size</key>
-								<integer>71784</integer>
+								<integer>87281</integer>
 							</dict>
 							<key>index_files/medium_526602.png</key>
 							<dict>
@@ -129,16 +129,6 @@
 								</data>
 								<key>Size</key>
 								<integer>37958</integer>
-							</dict>
-							<key>index_files/small_526710.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								syd5ScMzK+Md
-								76SbQPb+5w==
-								</data>
-								<key>Size</key>
-								<integer>438998</integer>
 							</dict>
 							<key>index_files/small_526714.png</key>
 							<dict>
@@ -270,6 +260,16 @@
 								<key>Size</key>
 								<integer>170336</integer>
 							</dict>
+							<key>index_files/small_527012.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								syd5ScMzK+Md
+								76SbQPb+5w==
+								</data>
+								<key>Size</key>
+								<integer>438998</integer>
+							</dict>
 							<key>index_files/small_p60859_n109623.png</key>
 							<dict>
 								<key>Digest</key>
@@ -284,41 +284,41 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								TPGeujKpTzHL
-								QR5lGhvUSw==
+								5SEHlmzIRPnE
+								h1Zlyu2W+A==
 								</data>
 								<key>Size</key>
-								<integer>35739</integer>
+								<integer>35205</integer>
 							</dict>
 							<key>index_files/stacks-image-097fb8f-400x190@2x.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								v9Af7SEGojgo
-								zGOufpUslA==
+								ZP2FJ/yve/bb
+								UMUDEFQ7OA==
 								</data>
 								<key>Size</key>
-								<integer>69192</integer>
+								<integer>68310</integer>
 							</dict>
-							<key>index_files/stacks-image-28941ca-1200x1028.jpg</key>
+							<key>index_files/stacks-image-247d7d5-400x342.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								DZTHZjFW/zza
-								FUuFoQeFqg==
+								GPNXZ/+KJ3Op
+								p8trPhRwtw==
 								</data>
 								<key>Size</key>
-								<integer>145846</integer>
+								<integer>33654</integer>
 							</dict>
-							<key>index_files/stacks-image-28941ca-1200x1028@2x.jpg</key>
+							<key>index_files/stacks-image-247d7d5-400x342@2x.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								HW8+oLt2FoZF
-								h3zGRgIO5A==
+								n5OOkayxifd9
+								v+1oCmsh5w==
 								</data>
 								<key>Size</key>
-								<integer>260669</integer>
+								<integer>61120</integer>
 							</dict>
 							<key>index_files/stacks-image-e97f241-400x164.png</key>
 							<dict>
@@ -334,11 +334,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								G0z+fnYGyvD4
-								stORYrdM4A==
+								BfbpItTxN4b7
+								ozfr5/hfbg==
 								</data>
 								<key>Size</key>
-								<integer>144150</integer>
+								<integer>171650</integer>
 							</dict>
 							<key>index_files/stacks_page_page1.js</key>
 							<dict>
