--- a/vermontcomplexsystems-foundation.rw8/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/6-Fellowships/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/6-Fellowships/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-05-02T20:30:55Z</date>
+						<date>2019-05-06T15:56:47Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -82,21 +82,21 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								TPGeujKpTzHL
-								QR5lGhvUSw==
+								5SEHlmzIRPnE
+								h1Zlyu2W+A==
 								</data>
 								<key>Size</key>
-								<integer>35739</integer>
+								<integer>35205</integer>
 							</dict>
 							<key>files/stacks-image-097fb8f-400x190@2x.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								v9Af7SEGojgo
-								zGOufpUslA==
+								ZP2FJ/yve/bb
+								UMUDEFQ7OA==
 								</data>
 								<key>Size</key>
-								<integer>69192</integer>
+								<integer>68310</integer>
 							</dict>
 							<key>files/stacks-image-73b449d-698x116.png</key>
 							<dict>
@@ -162,11 +162,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								8GRIyl4lDmQj
-								UXfPVcggpA==
+								Jsa5Ej6ZSvuZ
+								5CJ7nur37A==
 								</data>
 								<key>Size</key>
-								<integer>168985</integer>
+								<integer>169035</integer>
 							</dict>
 							<key>files/stacks_page_page50.js</key>
 							<dict>
@@ -182,11 +182,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								FhYtg0LuSE/2
-								cQLVpetvAw==
+								n+2vZg7SKdN0
+								Vx3l4hMW+Q==
 								</data>
 								<key>Size</key>
-								<integer>87770</integer>
+								<integer>88115</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
