--- a/vermontcomplexsystems-foundation.rw8/Pages/08-Partner/ChildPages/1-MassMutual-Center-of-Excellence/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/08-Partner/ChildPages/1-MassMutual-Center-of-Excellence/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-05-02T20:30:56Z</date>
+						<date>2019-05-06T15:56:47Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -62,21 +62,21 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								TPGeujKpTzHL
-								QR5lGhvUSw==
+								5SEHlmzIRPnE
+								h1Zlyu2W+A==
 								</data>
 								<key>Size</key>
-								<integer>35739</integer>
+								<integer>35205</integer>
 							</dict>
 							<key>files/stacks-image-097fb8f-400x190@2x.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								v9Af7SEGojgo
-								zGOufpUslA==
+								ZP2FJ/yve/bb
+								UMUDEFQ7OA==
 								</data>
 								<key>Size</key>
-								<integer>69192</integer>
+								<integer>68310</integer>
 							</dict>
 							<key>files/stacks-image-18f1b71-800x1200.jpg</key>
 							<dict>
@@ -158,16 +158,6 @@
 								<key>Size</key>
 								<integer>81939</integer>
 							</dict>
-							<key>files/stacks-image-850a43f-700x124.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								lyxiBhrhdGFD
-								Qx3fwJlO2A==
-								</data>
-								<key>Size</key>
-								<integer>20782</integer>
-							</dict>
 							<key>files/stacks-image-972d40d.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -187,6 +177,16 @@
 								</data>
 								<key>Size</key>
 								<integer>188190</integer>
+							</dict>
+							<key>files/stacks-image-ddd9365-698x116.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								DN0pOGJbIvms
+								dM/oyf0vAg==
+								</data>
+								<key>Size</key>
+								<integer>31117</integer>
 							</dict>
 							<key>files/stacks-image-e97f241-400x164.png</key>
 							<dict>
@@ -212,11 +212,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								nOC1g8fvmPnh
-								aXfbF2J85w==
+								hqAQ43yv4x0l
+								OQ8YaQCN4g==
 								</data>
 								<key>Size</key>
-								<integer>190333</integer>
+								<integer>190383</integer>
 							</dict>
 							<key>files/stacks_page_page70.js</key>
 							<dict>
@@ -232,11 +232,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								+u6GiypHE70y
-								VB0iz3Fw9A==
+								aG5a34ZZ5I9U
+								K6t62cqLsw==
 								</data>
 								<key>Size</key>
-								<integer>88583</integer>
+								<integer>88928</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
