--- a/vermontcomplexsystems-foundation.rw8/Pages/09-003Cheader003EPeople003C002Fheader003E/ChildPages/1-Open-positions/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/09-003Cheader003EPeople003C002Fheader003E/ChildPages/1-Open-positions/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-05-02T20:30:56Z</date>
+						<date>2019-05-06T15:56:47Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -64,31 +64,31 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								TPGeujKpTzHL
-								QR5lGhvUSw==
+								5SEHlmzIRPnE
+								h1Zlyu2W+A==
 								</data>
 								<key>Size</key>
-								<integer>35739</integer>
+								<integer>35205</integer>
 							</dict>
 							<key>files/stacks-image-097fb8f-400x190@2x.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								v9Af7SEGojgo
-								zGOufpUslA==
+								ZP2FJ/yve/bb
+								UMUDEFQ7OA==
 								</data>
 								<key>Size</key>
-								<integer>69192</integer>
+								<integer>68310</integer>
 							</dict>
-							<key>files/stacks-image-850a43f-700x124.jpg</key>
+							<key>files/stacks-image-ddd9365-698x116.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								lyxiBhrhdGFD
-								Qx3fwJlO2A==
+								DN0pOGJbIvms
+								dM/oyf0vAg==
 								</data>
 								<key>Size</key>
-								<integer>20782</integer>
+								<integer>31117</integer>
 							</dict>
 							<key>files/stacks-image-e97f241-400x164.png</key>
 							<dict>
@@ -104,11 +104,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								0KueRYeeUpMP
-								xXRghqaBrg==
+								oPPHrWE6du6I
+								rtUkbs455w==
 								</data>
 								<key>Size</key>
-								<integer>121580</integer>
+								<integer>121629</integer>
 							</dict>
 							<key>files/stacks_page_page6.js</key>
 							<dict>
@@ -124,11 +124,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								D4r4axmdRAqJ
-								bWn+bHtEag==
+								2ArbAXJ2Eo0/
+								mDAgJBrdOQ==
 								</data>
 								<key>Size</key>
-								<integer>53812</integer>
+								<integer>54176</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
