chat with the editors
chat with the editors

--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-05-05T16:59:32Z</date>
+						<date>2019-05-06T18:07:47Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -84,21 +84,21 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								TPGeujKpTzHL
-								QR5lGhvUSw==
+								5SEHlmzIRPnE
+								h1Zlyu2W+A==
 								</data>
 								<key>Size</key>
-								<integer>35739</integer>
+								<integer>35205</integer>
 							</dict>
 							<key>files/stacks-image-097fb8f-400x190@2x.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								v9Af7SEGojgo
-								zGOufpUslA==
+								ZP2FJ/yve/bb
+								UMUDEFQ7OA==
 								</data>
 								<key>Size</key>
-								<integer>69192</integer>
+								<integer>68310</integer>
 							</dict>
 							<key>files/stacks-image-0c90353-700x375.jpg</key>
 							<dict>
@@ -274,11 +274,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								J0oCqNLQIZun
-								8nxN/0xT1A==
+								AQQpX6Vwp+W4
+								iqILFHYS5g==
 								</data>
 								<key>Size</key>
-								<integer>28375</integer>
+								<integer>27501</integer>
 							</dict>
 							<key>files/stacks-image-7700296-350x375.png</key>
 							<dict>
@@ -349,16 +349,6 @@
 								</data>
 								<key>Size</key>
 								<integer>339587</integer>
-							</dict>
-							<key>files/stacks-image-a0c9938-350x375.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								+9qPfPvDFaVC
-								lDF0ikR3Dw==
-								</data>
-								<key>Size</key>
-								<integer>21308</integer>
 							</dict>
 							<key>files/stacks-image-a4b77ae-350x375.png</key>
 							<dict>
@@ -554,11 +544,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								SGkY2QNNvMzJ
-								epw5AP9jwQ==
+								PVQq7IjA9Jqh
+								9K8uz47KgA==
 								</data>
 								<key>Size</key>
-								<integer>551720</integer>
+								<integer>550031</integer>
 							</dict>
 							<key>files/stacks_page_page55.js</key>
 							<dict>
@@ -574,11 +564,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								J0XmsP2gOkEF
-								qPCeFReaPA==
+								9nP+IOFNv8C1
+								GfaQSmkIqA==
 								</data>
 								<key>Size</key>
-								<integer>931927</integer>
+								<integer>932129</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
