--- a/vermontcomplexsystems-foundation.rw8/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Contents.plist
@@ -8066,7 +8066,7 @@
 					<key>page55 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-05-06T18:10:39Z</date>
+						<date>2019-05-06T21:21:02Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -8381,6 +8381,16 @@
 								<key>Size</key>
 								<integer>339587</integer>
 							</dict>
+							<key>files/stacks-image-a0c9938-350x375.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								+9qPfPvDFaVC
+								lDF0ikR3Dw==
+								</data>
+								<key>Size</key>
+								<integer>21308</integer>
+							</dict>
 							<key>files/stacks-image-a4b77ae-350x375.png</key>
 							<dict>
 								<key>Digest</key>
@@ -8575,31 +8585,31 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								N8Y2YVb0fTQH
-								HjOSeWXgDw==
+								cwftA1DEnbRa
+								toevAtEKdg==
 								</data>
 								<key>Size</key>
-								<integer>550031</integer>
+								<integer>556357</integer>
 							</dict>
 							<key>files/stacks_page_page55.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								bDSaWWzkGCYL
-								Vm5aAEEClg==
+								tR/zzs0jwUy4
+								AFg0DXe+Fw==
 								</data>
 								<key>Size</key>
-								<integer>76439</integer>
+								<integer>76803</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								9nP+IOFNv8C1
-								GfaQSmkIqA==
+								IfBxcDvZKKH9
+								qZMZRIM20g==
 								</data>
 								<key>Size</key>
-								<integer>932129</integer>
+								<integer>937883</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -14650,7 +14660,7 @@
 					<key>rw:document:extrafiles - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-05-06T18:10:39Z</date>
+						<date>2019-05-06T20:42:40Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -14679,11 +14689,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								7lLZ6PfKx8OF
-								ocEx83puGw==
+								xl4fvOj1IdQk
+								VZrAimGltg==
 								</data>
 								<key>Size</key>
-								<integer>5537</integer>
+								<integer>5569</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -14762,7 +14772,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-05-06T18:10:39Z</date>
+						<date>2019-05-06T20:42:40Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -15801,11 +15811,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								RXwsJAhSSNsy
-								yVL48h+Tow==
+								yGSVNHojDkMs
+								VIbyzy9COQ==
 								</data>
 								<key>Size</key>
-								<integer>3785</integer>
+								<integer>4636</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -15949,7 +15959,7 @@
 				RDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0aWNpcGFu
 				dHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVkdWxlLnBk
 				Zl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFFLTU3QjlB
-				NzZEQjMxM9JDC0RFV05TLnRpbWUjQcFAWBF6jUOADNIe
+				NzZEQjMxM9JDC0RFV05TLnRpbWUjQcFAbmDrD1qADNIe
 				H0dIVk5TRGF0ZaJHI9MJCgtKTE6hS4AOoU2AD4AQXxAt
 				c2Z0cDovY21wbHhzeXMudzMudXZtLmVkdS93d3ctcm9v
 				dC90ZW1wbGF0ZXJ5CNIeH1JTXxATTlNNdXRhYmxlRGlj
@@ -15959,14 +15969,14 @@
 				FoAVXxAkMkU4QzdEREMtQUVCNC00MUZCLUJGRUQtRTZC
 				OEMwRDQ3QzkzXxAjUEZEIGZvciBwYXJ0aWNpcGFudHMg
 				SFdCIEFnZW5kYS5wZGZfECQ1RjgwNjhENS0wNDgyLTQx
-				MDItQTc3QS0xODU2RUYwOUZBRUXSQwtoRSNBwUBYEXqO
-				P4AM0wkKC2ttTqFsgBihTYAPgBBfEC1zZnRwOi9jbXBs
+				MDItQTc3QS0xODU2RUYwOUZBRUXSQwtoRSNBwUBuYOsP
+				8YAM0wkKC2ttTqFsgBihTYAPgBBfEC1zZnRwOi9jbXBs
 				eHN5cy53My51dm0uZWR1L3d3dy1yb290L3RlbXBsYXRl
 				cnnaLS4LLzAxEzIzNDVzNxYWd3h5ensIgCCAEYAAgACA
 				HoAbgBqAHYAcXxAkMzExQ0JERDItOTJCNy00MDE4LUIw
 				OTgtNDhGMjhFMEQwOUFGXxAcb2N0b3B1c19pY29uX3Ry
 				YW5zcGFyZW50LnBuZ18QJDAzQTRDMzNCLTY2NjAtNDMx
-				Mi1BQkIxLURERDE3ODVGRjkxM9JDC4BFI0HBQFgReo5x
+				Mi1BQkIxLURERDE3ODVGRjkxM9JDC4BFI0HBQG5g6xBW
 				gAzTCQoLg4VOoYSAH6FNgA+AEF8QLXNmdHA6L2NtcGx4
 				c3lzLnczLnV2bS5lZHUvd3d3LXJvb3QvdGVtcGxhdGVy
 				eV8Qbi92YXIvZm9sZGVycy82Ni9oX252bng0OTVmc19w
@@ -15976,7 +15986,7 @@
 				kpOUCIAogBGAAIAAgCaAI4AigCWAJF8QJEVCN0EwMEJB
 				LTI0RTMtNDY4Qi1CNDU2LTlDMjM3QjgwRDBFQ1tmYXZp
 				Y29uLmljb18QJEE1NDVEMzc1LTFCNkItNEU5My1CQjU3
-				LTEyNEY1NzEyMEZFMtJDC5lFI0HBQFgReo6kgAzTCQoL
+				LTEyNEY1NzEyMEZFMtJDC5lFI0HBQG5g6xCAgAzTCQoL
 				nJ5OoZ2AJ6FNgA+AEF8QLXNmdHA6L2NtcGx4c3lzLncz
 				LnV2bS5lZHUvd3d3LXJvb3QvdGVtcGxhdGVyeV8QXS92
 				YXIvZm9sZGVycy82Ni9oX252bng0OTVmc19wMGxteGI3
@@ -15986,7 +15996,7 @@
 				ECQ0MTExRkI1Mi1BMjJBLTRENjUtODY5Mi1CRTYzMEU2
 				RENBNkNfEBRhcHBsZS10b3VjaC1pY29uLnBuZ18QJEFC
 				NTBGRDUyLUE1NEUtNEYyMi05OTRELUUxNUE3RUYyMjRB
-				MtJDC7JFI0HBQFgReo7FgAzTCQoLtbdOobaAL6FNgA+A
+				MtJDC7JFI0HBQG5g6xCqgAzTCQoLtbdOobaAL6FNgA+A
 				EF8QLXNmdHA6L2NtcGx4c3lzLnczLnV2bS5lZHUvd3d3
 				LXJvb3QvdGVtcGxhdGVyeV8QZi92YXIvZm9sZGVycy82
 				Ni9oX252bng0OTVmc19wMGxteGI3Z3RwcDQwMDAwZ3Ev
