ROOM FOR SCHOOL NETSCI
ROOM FOR SCHOOL NETSCI

--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-05-06T21:21:02Z</date>
+						<date>2019-05-07T18:13:01Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -574,11 +574,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								IfBxcDvZKKH9
-								qZMZRIM20g==
+								RJwgZONJ/TZK
+								+vXLVRYSlA==
 								</data>
 								<key>Size</key>
-								<integer>937883</integer>
+								<integer>937911</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
