--- a/vermontcomplexsystems-foundation.rw8/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Contents.plist
@@ -8066,7 +8066,7 @@
 					<key>page55 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-05-07T18:13:01Z</date>
+						<date>2019-05-07T22:45:57Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -8300,6 +8300,16 @@
 								</data>
 								<key>Size</key>
 								<integer>477959</integer>
+							</dict>
+							<key>files/stacks-image-6fb48dc-1200x488.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								GuHwA2GkvWbi
+								SvmadcRb+g==
+								</data>
+								<key>Size</key>
+								<integer>107278</integer>
 							</dict>
 							<key>files/stacks-image-72d04bd-900x156.jpg</key>
 							<dict>
@@ -8585,18 +8595,18 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								cwftA1DEnbRa
-								toevAtEKdg==
+								+vE5WwjCBSIj
+								FIp7+SdlwA==
 								</data>
 								<key>Size</key>
-								<integer>556357</integer>
+								<integer>556404</integer>
 							</dict>
 							<key>files/stacks_page_page55.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								tR/zzs0jwUy4
-								AFg0DXe+Fw==
+								zIgRsZ2vAt0r
+								BVcZ0KOJrw==
 								</data>
 								<key>Size</key>
 								<integer>76803</integer>
@@ -8605,11 +8615,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								RJwgZONJ/TZK
-								+vXLVRYSlA==
+								GORtCL51/MS7
+								TUJN6yyvaw==
 								</data>
 								<key>Size</key>
-								<integer>937911</integer>
+								<integer>938531</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -8718,7 +8728,7 @@
 					<key>page57 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-05-02T20:30:55Z</date>
+						<date>2019-05-07T22:45:57Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -8992,6 +9002,16 @@
 								</data>
 								<key>Size</key>
 								<integer>257542</integer>
+							</dict>
+							<key>files/stacks-image-6fb48dc-1200x488.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								GuHwA2GkvWbi
+								SvmadcRb+g==
+								</data>
+								<key>Size</key>
+								<integer>107278</integer>
 							</dict>
 							<key>files/stacks-image-7322bd0-350x375.jpg</key>
 							<dict>
@@ -9307,11 +9327,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								I7x6Z2MCaHDa
-								lOwYR7txVA==
+								ORTKeqZDJg62
+								dDj3utKUlw==
 								</data>
 								<key>Size</key>
-								<integer>254673</integer>
+								<integer>254720</integer>
 							</dict>
 							<key>files/stacks_page_page57.js</key>
 							<dict>
@@ -9327,11 +9347,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								GItgX887JIIu
-								4ufcRzD8EA==
+								hnLsWcADUMde
+								2pH844tDvA==
 								</data>
 								<key>Size</key>
-								<integer>166766</integer>
+								<integer>167386</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -9790,7 +9810,7 @@
 					<key>page59 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-05-02T20:30:55Z</date>
+						<date>2019-05-07T22:45:57Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -9964,6 +9984,16 @@
 								</data>
 								<key>Size</key>
 								<integer>15296</integer>
+							</dict>
+							<key>files/stacks-image-6fb48dc-1200x488.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								GuHwA2GkvWbi
+								SvmadcRb+g==
+								</data>
+								<key>Size</key>
+								<integer>107278</integer>
 							</dict>
 							<key>files/stacks-image-7d9976e-150x128.png</key>
 							<dict>
@@ -10219,11 +10249,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								G9Ffh/n09zLL
-								s4wV9RCWcw==
+								cXW50RrGmB+O
+								R0LeE++m3A==
 								</data>
 								<key>Size</key>
-								<integer>85892</integer>
+								<integer>86369</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -14772,7 +14802,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-05-07T18:13:01Z</date>
+						<date>2019-05-07T22:45:57Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -15811,8 +15841,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								jMnN4sPw9AS2
-								bRKW6zEJqg==
+								gAG9VT0guFBP
+								ywn3dLDksw==
 								</data>
 								<key>Size</key>
 								<integer>3785</integer>
@@ -15959,7 +15989,7 @@
 				RDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0aWNpcGFu
 				dHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVkdWxlLnBk
 				Zl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFFLTU3QjlB
-				NzZEQjMxM9JDC0RFV05TLnRpbWUjQcFBARjsiB6ADNIe
+				NzZEQjMxM9JDC0RFV05TLnRpbWUjQcFBIRW7pY+ADNIe
 				H0dIVk5TRGF0ZaJHI9MJCgtKTE6hS4AOoU2AD4AQXxAt
 				c2Z0cDovY21wbHhzeXMudzMudXZtLmVkdS93d3ctcm9v
 				dC90ZW1wbGF0ZXJ5CNIeH1JTXxATTlNNdXRhYmxlRGlj
@@ -15969,14 +15999,14 @@
 				FoAVXxAkMkU4QzdEREMtQUVCNC00MUZCLUJGRUQtRTZC
 				OEMwRDQ3QzkzXxAjUEZEIGZvciBwYXJ0aWNpcGFudHMg
 				SFdCIEFnZW5kYS5wZGZfECQ1RjgwNjhENS0wNDgyLTQx
-				MDItQTc3QS0xODU2RUYwOUZBRUXSQwtoRSNBwUEBGOyI
-				voAM0wkKC2ttTqFsgBihTYAPgBBfEC1zZnRwOi9jbXBs
+				MDItQTc3QS0xODU2RUYwOUZBRUXSQwtoRSNBwUEhFbum
+				L4AM0wkKC2ttTqFsgBihTYAPgBBfEC1zZnRwOi9jbXBs
 				eHN5cy53My51dm0uZWR1L3d3dy1yb290L3RlbXBsYXRl
 				cnnaLS4LLzAxEzIzNDVzNxYWd3h5ensIgCCAEYAAgACA
 				HoAbgBqAHYAcXxAkMzExQ0JERDItOTJCNy00MDE4LUIw
 				OTgtNDhGMjhFMEQwOUFGXxAcb2N0b3B1c19pY29uX3Ry
 				YW5zcGFyZW50LnBuZ18QJDAzQTRDMzNCLTY2NjAtNDMx
-				Mi1BQkIxLURERDE3ODVGRjkxM9JDC4BFI0HBQQEY7Ijo
+				Mi1BQkIxLURERDE3ODVGRjkxM9JDC4BFI0HBQSEVu6Zh
 				gAzTCQoLg4VOoYSAH6FNgA+AEF8QLXNmdHA6L2NtcGx4
 				c3lzLnczLnV2bS5lZHUvd3d3LXJvb3QvdGVtcGxhdGVy
 				eV8Qbi92YXIvZm9sZGVycy82Ni9oX252bng0OTVmc19w
@@ -15986,7 +16016,7 @@
 				kpOUCIAogBGAAIAAgCaAI4AigCWAJF8QJEVCN0EwMEJB
 				LTI0RTMtNDY4Qi1CNDU2LTlDMjM3QjgwRDBFQ1tmYXZp
 				Y29uLmljb18QJEE1NDVEMzc1LTFCNkItNEU5My1CQjU3
-				LTEyNEY1NzEyMEZFMtJDC5lFI0HBQQEY7IkJgAzTCQoL
+				LTEyNEY1NzEyMEZFMtJDC5lFI0HBQSEVu6aDgAzTCQoL
 				nJ5OoZ2AJ6FNgA+AEF8QLXNmdHA6L2NtcGx4c3lzLncz
 				LnV2bS5lZHUvd3d3LXJvb3QvdGVtcGxhdGVyeV8QXS92
 				YXIvZm9sZGVycy82Ni9oX252bng0OTVmc19wMGxteGI3
@@ -15996,7 +16026,7 @@
 				ECQ0MTExRkI1Mi1BMjJBLTRENjUtODY5Mi1CRTYzMEU2
 				RENBNkNfEBRhcHBsZS10b3VjaC1pY29uLnBuZ18QJEFC
 				NTBGRDUyLUE1NEUtNEYyMi05OTRELUUxNUE3RUYyMjRB
-				MtJDC7JFI0HBQQEY7IkrgAzTCQoLtbdOobaAL6FNgA+A
+				MtJDC7JFI0HBQSEVu6acgAzTCQoLtbdOobaAL6FNgA+A
 				EF8QLXNmdHA6L2NtcGx4c3lzLnczLnV2bS5lZHUvd3d3
 				LXJvb3QvdGVtcGxhdGVyeV8QZi92YXIvZm9sZGVycy82
 				Ni9oX252bng0OTVmc19wMGxteGI3Z3RwcDQwMDAwZ3Ev
